# cosmetics_shop

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yaml  entrypoint.sh  heroku.yml  nginx.conf  pyproject.toml  requirements.txt  swagger.yaml
data/: products_data.json  products_data_example.json
src/: pyproject.toml
src/accounts/: adapters.py  admin.py  authentication.py  forms.py  models.py  signals.py  tasks.py  urls.py  validators.py  views.py
src/accounts/migrations/: 0001_initial.py  0001_initial_squashed_0009_remove_customuser_deletion_scheduled_date_and_more.py  0002_remove_customuser_first_name_and_more.py  0003_alter_customuser_email.py  0004_activationtoken.py  0005_remove_customuser_permissions_customuser_groups.py  0006_alter_activationtoken_options_and_more.py  0007_alter_activationtoken_options_and_more.py  0008_customuser_deletion_scheduled_date_and_more.py  0009_remove_customuser_deletion_scheduled_date_and_more.py  0010_alter_customuser_email.py  0011_remove_activationtoken_user_and_more.py
src/accounts/services/: account_services.py
src/accounts/tests/: conftest.py  test_account_services.py  test_authentication.py  test_forms.py  test_models.py  test_tasks.py  test_validators.py
src/accounts/utils/: account_services.py  validators.py
src/accounts/views/: auth.py  favorites.py  user_section.py
src/api/: urls.py
src/api/utils/: schema_helpers.py  throttles.py
src/api/v1/: filters.py  permissions.py
src/config/: celery.py  settings.py  urls.py
src/config/settings/: base.py  dev.py  production.py
src/cosmetics_shop/: admin.py  ajax.py  apps.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  views.py
src/cosmetics_shop/migrations/: 0001_initial.py  0001_initial_squashed_0030_tag_slug_alter_order_status_and_more.py  0002_brand_product_product_code_product_slug_and_more.py  0003_rename_name_brand_brand_name_and_more.py  0004_rename_card_cart_rename_carditem_cartitem_and_more.py  0005_remove_order_user_order_snapshot_address_and_more.py  0006_alter_cart_user.py  0007_product_stock_orderstatuslog.py  0008_remove_order_status_order_code_product_code_and_more.py  0009_remove_product_slug_alter_order_code_and_more.py  0010_alter_orderitem_product.py  0011_tag_alter_order_options_product_tags_favorite.py  0012_orderitem_snapshot_price_orderitem_snapshot_product_and_more.py  0013_alter_brand_options.py  0014_remove_client_full_name_client_first_name_and_more.py  0015_remove_client_email_remove_order_snapshot_email.py  0016_alter_category_options_alter_order_options_and_more.py  0017_alter_category_options_alter_order_options_and_more.py  0018_alter_brand_options_alter_category_options_and_more.py  0019_alter_client_options_alter_deliveryaddress_options.py  0020_alter_product_options.py  0021_alter_brand_options_alter_category_options_and_more.py  0022_alter_category_options_alter_groupproduct_options_and_more.py  0023_remove_deliveryaddress_is_primary_and_more.py  0024_rename_is_main_deliveryaddress_is_primary_and_more.py  0025_alter_cart_options_alter_favorite_options_and_more.py  0026_client_deletion_scheduled_date_and_more.py  0027_order_completed_at.py  0028_alter_orderstatuslog_options_and_more.py  0029_payment.py  0030_tag_slug_alter_order_status_and_more.py  0031_remove_deliveryaddress_street_order_cart_and_more.py
src/cosmetics_shop/payments/: enums.py  mappers.py  mono.py
src/cosmetics_shop/services/: cart_services.py  categories_services.py  category_services.py  client_service.py  email_sending_services.py  nova_poshta_service.py  order_service.py  payment_service.py  product_service.py
src/cosmetics_shop/templatetags/: custom_filters.py
src/cosmetics_shop/tests/: conftest.py  factories.py  test_ajax.py  test_context_processors.py  test_models.py  test_tasks.py  (+1 more)
src/staff/: ajax.py  forms.py  mixins.py  models.py  urls.py  views.py
src/stuff/: forms.py  urls.py  views.py
src/utils/: custom_exceptions.py  custom_types.py  date_utils.py  helper_function.py  setting_utils.py  storage_backends.py
(+178 files in other folders)
