[project]
name = "cosmetics-shop"
version = "0.1.0"
description = ""
authors = [
    {name = "Baiur Yuliia",email = "juliy14497@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "amqp (==5.3.1)",
    "asgiref (==3.8.1)",
    "billiard (==4.2.4)",
    "celery (==5.6.2)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "click (==8.2.1)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "coverage (==7.13.4)",
    "cryptography (==46.0.2)",
    "django (==5.2.1)",
    "django-allauth (==65.12.0)",
    "django-stubs (==5.2.9)",
    "django-stubs-ext (==5.2.9)",
    "idna (==3.11)",
    "iniconfig (==2.3.0)",
    "jwt (==1.4.0)",
    "kombu (==5.6.2)",
    "librt (==0.7.8)",
    "packaging (==25.0)",
    "pathspec (>=1.0.0)",
    "phonenumbers (==9.0.16)",
    "pillow (==11.3.0)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "prompt-toolkit (==3.0.52)",
    "pycparser (==2.23)",
    "pygments (==2.19.2)",
    "pyjwt (==2.10.1)",
    "pytest (==9.0.2)",
    "pytest-cov (==7.0.0)",
    "pytest-django (==4.12.0)",
    "pytest-mock (==3.15.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "python-slugify (==8.0.4)",
    "requests (==2.32.5)",
    "six (==1.17.0)",
    "sqlparse (==0.5.3)",
    "text-unidecode (==1.3)",
    "types-python-dateutil (==2.9.0.20260124)",
    "types-pyyaml (==6.0.12.20250915)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "tzlocal (==5.3.1)",
    "urllib3 (==2.5.0)",
    "vine (==5.1.0)",
    "wcwidth (==0.6.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework-stubs (>=3.16.8,<4.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "types-requests (>=2.33.0.20260327,<3.0.0.0)",
    "django-storages[s3] (>=1.14.6,<2.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

# mypy
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.tests.*",]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "celery.schedules.*",
    "allauth.*",
    "debug_toolbar.*",
    "django_filters.*",
]
ignore_missing_imports = true

# ruff
[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "*/migrations/*",
]
src = [
    "src",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/config/settings/*.py" = ["F403", "F405", "E501"]

# pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=html --reuse-db --nomigrations"

# coverage
[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/management/*",
    "*/tests/*",
    "manage.py",
    "*/venv/*",
    "*/site-packages/*",
    "*/config/*",
    "*urls.py*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    'if __name__ == .__main__.:'
]

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "mypy-extensions (>=1.1.0,<2.0.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "types-django-filter (>=25.2.0.20260213,<26.0.0.0)",
]
